bk_ida/gccida/c1/adjust_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_stack/src/explow.c:1326:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_stack/src/obj/explow.o] Error 1
